# wildintel-trapverify

./: .env.example  .gitignore  CHANGELOG.md  Caddyfile  README.md  cli.py  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.sh  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml
0.2.0/: index.html
0.2.0/developer-manual/: index.html
0.2.0/user-manual/: index.html
0.3.0/api/: index.html
0.3.0/search/: search_index.json
0.3.0/user-manual/: index.html
backend/: .env.example  Dockerfile  Dockerfile.build  Dockerfile.build.windows  README.md  cli.py  mkdocs.yml  pyproject.toml  setup.sh
backend/docs/: about.md  api.md  configuration.md  developer.md  features.md  index.md  installation.md  quickstart.md  workflow.md
backend/src/: app_entry.py  camtrap_workflow.py  main.py  occupancy_model.py  settings.py
backend/src/api/: deps.py
backend/src/api/routers/: convert.py  decisions.py  fs.py  health.py  media.py  results.py  session.py  species.py  trapper.py
backend/src/schemas/: requests.py
backend/src/services/: results_service.py  session_service.py  trapper_service.py  workflow_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_integration.py
backend/tests/unit/: test_api.py  test_occupancy.py  test_workflow.py
dev/: 404.html  index.html  sitemap.xml
docs/: about.md  developer-manual.md  features.md  index.md  user-manual.md
examples/: generate_sample.py
frontend/: index.html  mkdocs.yml  nginx.conf  package-lock.json  package.json  setup.sh  vite.config.ts
installer/: windows.iss
(+42 files in other folders)
