[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]

[project]
name = "camtrap-verify-backend"
version = "0.1.0"
description = "CamTrap Verify — FastAPI backend for iterative camera trap verification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "platformdirs>=4.10.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8",
    "mkdocs-material>=9.7.6",
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "typer>=0.15",
]

[project.scripts]
cli = "cli:app"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
